objects/Pricing_Deal_Product__c.object
<CustomObject>
    <fields>
        <fullName>Pricing_Deal_Product_Name__c</fullName>
        <description>Name of the Pricing Deal Product (the standard object name is limited to 80 characters)</description>
        <label>Pricing Deal Product Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Pricing Group</label>
        <referenceTo>Pricing_Group__c</referenceTo>
        <relationshipLabel>Pricing Deal Products</relationshipLabel>
        <relationshipName>Pricing_Deal_Products</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absa Online</fullName>
                </value>
                <value>
                    <fullName>Administration Fees</fullName>
                </value>
                <value>
                    <fullName>B.NET fees</fullName>
                </value>
                <value>
                    <fullName>Bank Drafts Issued</fullName>
                </value>
                <value>
                    <fullName>Bank Drafts Purchased</fullName>
                </value>
                <value>
                    <fullName>Barclays.Net</fullName>
                </value>
                <value>
                    <fullName>Barclays Dot Net B.Net</fullName>
                </value>
                <value>
                    <fullName>BII International (ICM \C2B</fullName>
                </value>
                <value>
                    <fullName>BII International (Trade Finance)</fullName>
                </value>
                <value>
                    <fullName>Bills</fullName>
                </value>
                <value>
                    <fullName>Bills for Collection Inwards (Imports)</fullName>
                </value>
                <value>
                    <fullName>Bills for collection Outward (Exports)</fullName>
                </value>
                <value>
                    <fullName>Business Integrator &gt; Attorney Management System</fullName>
                </value>
                <value>
                    <fullName>Business Integrator &gt; Card Online Solution</fullName>
                </value>
                <value>
                    <fullName>Business Integrator &gt; Card Online Solution : Co-branded Cards</fullName>
                </value>
                <value>
                    <fullName>Business Integrator &gt; General Fees</fullName>
                </value>
                <value>
                    <fullName>Business Integrator &gt; Host to Host</fullName>
                </value>
                <value>
                    <fullName>Business Integrator &gt; Information Products</fullName>
                </value>
                <value>
                    <fullName>Business Integrator &gt; Maintenance, Support &amp; Training Fees</fullName>
                </value>
                <value>
                    <fullName>Business Integrator &gt; Online High Volume Fee Structure: &gt; 300 Transactions Per Month</fullName>
                </value>
                <value>
                    <fullName>Business Integrator &gt;Online Low Volume Fee Structure: &lt; 300 Transactions Per Month</fullName>
                </value>
                <value>
                    <fullName>Business Integrator - Cash Focus</fullName>
                </value>
                <value>
                    <fullName>Business Integrator - Cash Focus - HIGH VOLUME PACKAGE</fullName>
                </value>
                <value>
                    <fullName>Business Integrator - Cash Focus - STANDARD PACKAGE</fullName>
                </value>
                <value>
                    <fullName>Business Integrator - Core</fullName>
                </value>
                <value>
                    <fullName>Business Integrator Host to Host - Fee Structure &lt; 10 000 transactions</fullName>
                </value>
                <value>
                    <fullName>Business Integrator Host to Host - Fee Structure &gt; 100 000 Transactions</fullName>
                </value>
                <value>
                    <fullName>Business Integrator Host to Host - Fee Structure &gt; 10 000 - 50 000 transactions</fullName>
                </value>
                <value>
                    <fullName>Business Integrator Host to Host - Fee Structure &gt; 50 000 -100 000 transactions</fullName>
                </value>
                <value>
                    <fullName>Business Integrator - Mailbox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>* In Foreign Currency: Issued Remote</fullName>
                </value>
                <value>
                    <fullName>* In Rand &amp; Foreign currency - Issued Local</fullName>
                </value>
                <value>
                    <fullName>Account Holder Verification</fullName>
                </value>
                <value>
                    <fullName>Account Holder Verification Batch</fullName>
                </value>
                <value>
                    <fullName>Account Holder Verification Real Time</fullName>
                </value>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Additional Charges In Respect Of Error Processing</fullName>
                </value>
                <value>
                    <fullName>Ad hoc reprint of bank statements</fullName>
                </value>
                <value>
                    <fullName>Ad Valorem fee</fullName>
                </value>
                <value>
                    <fullName>Advising (including standby Credits)</fullName>
                </value>
                <value>
                    <fullName>Aedo Debit Order</fullName>
                </value>
                <value>
                    <fullName>Amendments</fullName>
                </value>
                <value>
                    <fullName>Assignment of proceeds</fullName>
                </value>
                <value>
                    <fullName>Assistance with Fraud Recoveries</fullName>
                </value>
                <value>
                    <fullName>Avalisation of Bills (Per 3 month period or part thereof)</fullName>
                </value>
                <value>
                    <fullName>Balance enquires</fullName>
                </value>
                <value>
                    <fullName>Band 1 Online Low Volume Fee Structure</fullName>
                </value>
                <value>
                    <fullName>Band 2 Online High Volume Fee Structure</fullName>
                </value>
                <value>
                    <fullName>Bank codes</fullName>
                </value>
                <value>
                    <fullName>Bank Statements</fullName>
                </value>
                <value>
                    <fullName>Bills Discounted</fullName>
                </value>
                <value>
                    <fullName>Bills Negotiated</fullName>
                </value>
                <value>
                    <fullName>Card Ordering Fee per card</fullName>
                </value>
                <value>
                    <fullName>Cash Handling Fee</fullName>
                </value>
                <value>
                    <fullName>Cash Send Transaction</fullName>
                </value>
                <value>
                    <fullName>Cash Withdrawal Counter</fullName>
                </value>
                <value>
                    <fullName>Cash Withdrawals</fullName>
                </value>
                <value>
                    <fullName>CFC Accounts</fullName>
                </value>
                <value>
                    <fullName>Cheque Authorisation</fullName>
                </value>
                <value>
                    <fullName>Cheque Book Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Sequence__c</fullName>
        <label>Report Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Pricing Deal Product</label>
    <nameField>
        <label>Pricing Deal Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Deal Products</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>